data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_241.wast
;; 2. **Test 2: Loop with Conditional Branch Exiting with `nop`**:    - **Description**: A `loop` that includes a `br_if` instruction intended to exit the loop after certain iterations, but with `nop` instructions sprinkled between conditions.    - **Constraint**: Confirm that `nop` does not affect the execution of branching logic.    - **Relation to Infinite Loops**: Detects if `nop` can cause the loop to fail to exit, hence causing an infinite loop.    - **Example**: `(loop $L (nop) (br_if $L (i32.eqz (i32.const 0))))`

(assert_invalid
  (module
    (func (loop $L (nop) (br_if $L (i32.eqz (i32.const 0)))))
  )
  "invalid branch argument"
)